@@ -89,6 +89,7 @@
 		B2990D421DA28DD900F2B9BA /* h2_headers.h */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; path = h2_headers.h; sourceTree = "<group>"; };
 		B2A6EF2A1A9E3A93005DFC5B /* INSTALL */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text; path = INSTALL; sourceTree = "<group>"; };
 		B2A6EF2C1A9F2452005DFC5B /* DISCUSS */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text; path = DISCUSS; sourceTree = "<group>"; };
+		B2AAB4D5221D8E3D00DA2601 /* test_600_h2proxy.py */ = {isa = PBXFileReference; lastKnownFileType = text.script.python; path = test_600_h2proxy.py; sourceTree = "<group>"; };
 		B2AB9AB71C2ADBE100908DD6 /* h2_filter.c */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.c; path = h2_filter.c; sourceTree = "<group>"; };
 		B2AB9AB81C2ADBE100908DD6 /* h2_filter.h */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; path = h2_filter.h; sourceTree = "<group>"; };
 		B2AB9AB91C2ADBE100908DD6 /* h2_push.c */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.c; path = h2_push.c; sourceTree = "<group>"; };
@@ -504,6 +505,7 @@
 				B297A7C6214285970096F0D7 /* test_400_push.py */,
 				B2C1BDF721E38322002EF7B4 /* test_401_early_hints.py */,
 				B277B814221310B800A41B44 /* test_500_proxy.py */,
+				B2AAB4D5221D8E3D00DA2601 /* test_600_h2proxy.py */,
 				B2D2D2D52136D5CE00D8F6B7 /* TestEnv.py */,
 				B277B8172214582600A41B44 /* TestHttpdConf.py */,
 				B297A7C721429E8D0096F0D7 /* TestNghttp.py */,
